BBC2 tests ready.